--- a/app/src/main/res/layout/activity_login3.xml
+++ b/app/src/main/res/layout/activity_login3.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="serif-monospace"
-        android:text="Travel Journal"
+        android:text="Travel Diary"
         android:textColor="#DEF1DE"
         android:textSize="34sp"
         android:textStyle="bold"
@@ -87,6 +87,4 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent" />
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
