Trips page working + need to implement onClick for each trip

--- a/app/src/main/res/layout/activity_trips3.xml
+++ b/app/src/main/res/layout/activity_trips3.xml
@@ -16,5 +16,10 @@
         app:menu="@menu/menu"
         tools:layout_editor_absoluteX="0dp" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 
 </RelativeLayout>
