--- a/app/src/main/res/layout/activity_trip_page.xml
+++ b/app/src/main/res/layout/activity_trip_page.xml
@@ -6,19 +6,49 @@
     android:layout_height="match_parent"
     tools:context=".TripPage">
 
-    <TextView
-        android:id="@+id/title"
+    <ImageView
+        android:id="@+id/currentPhoto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="163dp"
-        android:layout_marginTop="56dp"
-        android:layout_marginEnd="191dp"
-        android:layout_marginBottom="656dp"
-        android:fontFamily="@font/architects_daughter"
-        android:hint="Title"
-        android:textSize="34sp"
+        android:layout_marginStart="3dp"
+        android:layout_marginEnd="384dp"
+        android:layout_marginBottom="707dp"
+        android:background="#00FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/ic_addphoto"
+        android:maxHeight="150dp"
+        android:maxWidth="150dp"/>
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="164dp"
+        android:text="Add new photo"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/currentPhoto"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/uploadBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="upload"
+        app:iconTint="#00874646"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.688" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
