--- a/app/src/main/res/layout/activity_show_photos.xml
+++ b/app/src/main/res/layout/activity_show_photos.xml
@@ -6,16 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".ShowPhotos">
 
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewPhotos"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="2dp"
-        android:layout_marginEnd="410dp"
-        android:layout_marginBottom="730dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:layout_editor_absoluteY="50dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
