--- a/app/src/main/res/layout/activity_login3.xml
+++ b/app/src/main/res/layout/activity_login3.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="serif-monospace"
-        android:text="Travel Diary"
+        android:text="TRAVEL DIARY"
         android:textColor="#DEF1DE"
         android:textSize="34sp"
         android:textStyle="bold"
