--- a/app/src/main/res/layout/activity_trip_page.xml
+++ b/app/src/main/res/layout/activity_trip_page.xml
@@ -12,9 +12,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="3dp"
         android:layout_marginTop="124dp"
+        android:adjustViewBounds="true"
         android:background="#00FFFFFF"
-        android:maxWidth="150dp"
-        android:maxHeight="150dp"
+        android:maxWidth="300dp"
+        android:maxHeight="250dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
