--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -18,7 +18,7 @@
 
     </com.google.android.material.bottomnavigation.BottomNavigationView>
 
-    <EditText
+    <TextView
         android:id="@+id/editTextTextEmailAddress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
